# kanjibrowse

./: .gitignore  Dockerfile  README.md  kanjibrowse.cabal  kanjiview.cabal
src/main/: Glyph.hs  GlyphDB.hs  Server.hs
