name:                  kanjibrowse
version:               0.1.0.0
license:               GPL-3
license-file:          LICENSE
author:                Mate J Kovacs
maintainer:            mkovaxx@gmail.com
build-type:            Simple
cabal-version:         >=1.10

executable server
  build-depends:       base >=4.7 && <4.8
                     , blaze-builder ==0.3.*
                     , utf8-string ==0.3.*
                     , http-types ==0.8.*
                     , wai ==2.1.*
                     , warp ==2.1.*
                     , xml ==1.3.*
                     , syb ==0.4.*
                     , containers ==0.5.*
                     , directory ==1.2.*
                     , filepath ==1.3.*
                     , strict ==0.3.*
                     , unordered-containers ==0.2.*
                     , conduit ==1.1.*
                     , conduit-combinators ==0.2.*
                     , deepseq ==1.3.*
                     , text ==1.1.*
  hs-source-dirs:      src/main
  --ghc-options:         -rtsopts
  main-is:             Server.hs
  default-language:    Haskell2010
